add site config to api description
